--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="favicon.ico" />
+  <link rel="icon" href="seahorse.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="logo192.png" />
   <link rel="manifest" href="manifest.json" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
-  <title>Portfolios & Accounts</title>
+  <title>Portfolios</title>
 </head>
 
 <body>
