--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
   <link rel="icon" href="seahorse.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="翁川竜海のポートフォリオサイトです。制作したアプリケーションやWeb開発・プログラミングの実績を掲載しています。" />
+  <meta name="keywords" content="翁川竜海,翁川 竜海,tatsumi oikawa,Tatsumi Oikawa,tatsumi,Tatsumi,oikawa,Oikawa" />
   <link rel="apple-touch-icon" href="logo192.png" />
   <link rel="manifest" href="manifest.json" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
