--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <link rel="apple-touch-icon" href="logo192.png" />
   <link rel="manifest" href="manifest.json" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
-  <title>Portfolios</title>
+  <title>Portfolios｜翁川 竜海</title>
 </head>
 
 <body>
