--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="翁川竜海のポートフォリオサイトです。制作したアプリケーションやWeb開発・プログラミングの実績を掲載しています。" />
   <meta name="keywords" content="翁川竜海,翁川 竜海,tatsumi oikawa,Tatsumi Oikawa,tatsumi,Tatsumi,oikawa,Oikawa" />
+  <meta name="google-site-verification" content="mjl6AnEukFsKEOFWPXyRR_ha38UkvTw9hz18NTxdD0w" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/seahorse.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
